/*
 * $Id: ChangeLog,v 1.6060 2008/04/29 22:14:08 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-04-30 05:10 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * mdir.bat
    + removal of BCC  *.il* files upon clean build
    + removal of MSVC *.idb files upon clean build
    + copybin branch
  * make_*.bat
  * dll_*.bat
    ! sync to have similar behaviour
  * makefile.wc
    + nologo on lib386 and link386

2008-04-29 17:30 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
  * make_b32.bat
  * makefile.bc
    + Support for CFLAGS, LFLAGS, HB_CG32, BCCDIR
    * Minor refinments
    
  * source\rtl\strtran.c
    * GPF trap
    
2008-04-29 08:10 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * make_vc.bat
    + Added needed /Y to xcopy or xcopy will HANG because of > NUL

2008-04-29 14:34 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * dll_b32.bat
    * Avoid always forcing errorlevel to 1 due to reset of probably non existent %LIBPREFIX%
      and %HB_MT_DIR%
  * make_b32.bat
    * Avoid always forcing errorlevel to 1 due to reset of probably non existent %LIBPREFIX%,
      %HB_MT% and %HB_MT_DIR%
  * makallbc.bat
    * Minor revision to error checking

2008-04-29 15:50 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  - target.mak
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
  * mdir.bat
    ! target.mak merged into common.mak
    ! deletion of .ppo file on clean build

2008-04-29 14:10 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * target.mak
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc